--- a/style.css
+++ b/style.css
@@ -6,14 +6,48 @@ body {
 
 h1 {
   font-family: 'Lato', sans-serif;
-/* font-family: 'Roboto', sans-serif;
-font-family: 'Tilt Prism', sans-serif;
-   */
 }
 
-img {
-
-  height: 300px;
-/*     width: 300px ;  */
-  
+img{
+  height: 200px;
+  animation: rotation 8s infinite linear;
 }
+
+
+
+img:hover {
+  height: 200px;
+  animation: shake 0.5s;
+  animation-iteration-count: infinite; 
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+
+
+.rotate {
+  animation: rotation 8s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+
